{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 53,
  "lineage": "cf0263c6-7e6f-6652-9627-a76ad03c0f24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b94cbf4df0c0717f",
            "arn": "arn:aws:ec2:us-east-1:905418078110:elastic-ip/eipalloc-0b94cbf4df0c0717f",
            "association_id": "eipassoc-055c95e4105901cfa",
            "domain": "vpc",
            "id": "eipalloc-0b94cbf4df0c0717f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9605b7080476b9d",
            "private_dns": "ip-10-0-0-61.ec2.internal",
            "private_ip": "10.0.0.61",
            "public_dns": "ec2-18-235-206-247.compute-1.amazonaws.com",
            "public_ip": "18.235.206.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eto-subgraph-nat-eip"
            },
            "tags_all": {
              "Name": "eto-subgraph-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:internet-gateway/igw-09e95194588186375",
            "id": "igw-09e95194588186375",
            "owner_id": "905418078110",
            "tags": {
              "Name": "eto-subgraph-igw"
            },
            "tags_all": {
              "Name": "eto-subgraph-igw"
            },
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418078110:loadbalancer/app/eto-subgraph-alb/c0587edcb46dc957",
            "arn_suffix": "app/eto-subgraph-alb/c0587edcb46dc957",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eto-subgraph-alb-296458121.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418078110:loadbalancer/app/eto-subgraph-alb/c0587edcb46dc957",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eto-subgraph-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d365ec865c2ef1b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a72b6adbfc145ed0"
              },
              {
                "subnet_id": "subnet-0d976021fa005839b"
              }
            ],
            "subnets": [
              "subnet-0a72b6adbfc145ed0",
              "subnet-0d976021fa005839b"
            ],
            "tags": {
              "Name": "eto-subgraph-alb"
            },
            "tags_all": {
              "Name": "eto-subgraph-alb"
            },
            "vpc_id": "vpc-0c0f241c23120d594",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418078110:listener/app/eto-subgraph-alb/c0587edcb46dc957/06525b66a9b45273",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418078110:targetgroup/eto-subgraph-tg/b6f51bc1c48013d9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418078110:listener/app/eto-subgraph-alb/c0587edcb46dc957/06525b66a9b45273",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905418078110:loadbalancer/app/eto-subgraph-alb/c0587edcb46dc957",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418078110:targetgroup/eto-subgraph-tg/b6f51bc1c48013d9",
            "arn_suffix": "targetgroup/eto-subgraph-tg/b6f51bc1c48013d9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418078110:targetgroup/eto-subgraph-tg/b6f51bc1c48013d9",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eto-subgraph-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "eto-subgraph-tg"
            },
            "tags_all": {
              "Name": "eto-subgraph-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b94cbf4df0c0717f",
            "association_id": "eipassoc-055c95e4105901cfa",
            "connectivity_type": "public",
            "id": "nat-090b335023fb4dce5",
            "network_interface_id": "eni-0d9605b7080476b9d",
            "private_ip": "10.0.0.61",
            "public_ip": "18.235.206.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a72b6adbfc145ed0",
            "tags": {
              "Name": "eto-subgraph-nat"
            },
            "tags_all": {
              "Name": "eto-subgraph-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:route-table/rtb-047253d5b421b52be",
            "id": "rtb-047253d5b421b52be",
            "owner_id": "905418078110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090b335023fb4dce5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eto-subgraph-private-rt"
            },
            "tags_all": {
              "Name": "eto-subgraph-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:route-table/rtb-06fc12d18cd4f85ab",
            "id": "rtb-06fc12d18cd4f85ab",
            "owner_id": "905418078110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e95194588186375",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eto-subgraph-public-rt"
            },
            "tags_all": {
              "Name": "eto-subgraph-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8c1ec41a1b30605",
            "route_table_id": "rtb-047253d5b421b52be",
            "subnet_id": "subnet-0c6ec24aead25dc6f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae0963ba77772961",
            "route_table_id": "rtb-047253d5b421b52be",
            "subnet_id": "subnet-05aebc70c937a59f6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d0a353ccdc6188",
            "route_table_id": "rtb-06fc12d18cd4f85ab",
            "subnet_id": "subnet-0a72b6adbfc145ed0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a9379af34b983e0",
            "route_table_id": "rtb-06fc12d18cd4f85ab",
            "subnet_id": "subnet-0d976021fa005839b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:security-group/sg-0d365ec865c2ef1b8",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d365ec865c2ef1b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eto-subgraph-alb-sg",
            "name_prefix": "",
            "owner_id": "905418078110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eto-subgraph-alb-sg"
            },
            "tags_all": {
              "Name": "eto-subgraph-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:security-group/sg-0d92d36f1a4dee80c",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d92d36f1a4dee80c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d365ec865c2ef1b8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eto-subgraph-ecs-sg",
            "name_prefix": "",
            "owner_id": "905418078110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eto-subgraph-ecs-sg"
            },
            "tags_all": {
              "Name": "eto-subgraph-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:security-group/sg-0100029eb8caef55b",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0100029eb8caef55b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d92d36f1a4dee80c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "eto-subgraph-rds-sg",
            "name_prefix": "",
            "owner_id": "905418078110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eto-subgraph-rds-sg"
            },
            "tags_all": {
              "Name": "eto-subgraph-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:subnet/subnet-0c6ec24aead25dc6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ec24aead25dc6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418078110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eto-subgraph-private-1"
            },
            "tags_all": {
              "Name": "eto-subgraph-private-1"
            },
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:subnet/subnet-05aebc70c937a59f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aebc70c937a59f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418078110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eto-subgraph-private-2"
            },
            "tags_all": {
              "Name": "eto-subgraph-private-2"
            },
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:subnet/subnet-0a72b6adbfc145ed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a72b6adbfc145ed0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418078110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eto-subgraph-public-1"
            },
            "tags_all": {
              "Name": "eto-subgraph-public-1"
            },
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:subnet/subnet-0d976021fa005839b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d976021fa005839b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418078110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eto-subgraph-public-2"
            },
            "tags_all": {
              "Name": "eto-subgraph-public-2"
            },
            "vpc_id": "vpc-0c0f241c23120d594"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418078110:vpc/vpc-0c0f241c23120d594",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06539dc5bd3bb580d",
            "default_route_table_id": "rtb-02226d8f3f52d977d",
            "default_security_group_id": "sg-01c591c9987fe4fae",
            "dhcp_options_id": "dopt-04e0f0c35e13fe697",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0f241c23120d594",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02226d8f3f52d977d",
            "owner_id": "905418078110",
            "tags": {
              "Name": "eto-subgraph-vpc"
            },
            "tags_all": {
              "Name": "eto-subgraph-vpc"
            }
          }
        }
      ]
    }
  ]
}